--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>Cycles</title>
+	<meta name="description" content="Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山市(Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.">
+	<meta name="keywords" content="Créteil, Cristolib, Namur, Li bia velo, Rouen, cy\'clic, Besancon, VéloCité, Toyama, 富山市, cyclocity, Marseille, Le vélo, Stockholm, Cyclocity, Nancy, vélOstan\'lib, Seville, Sevici, Bruxelles-Capitale, villo, Cergy-Pontoise, Velo2, Lyon, Vélo\'V, Paris, Velib, Amiens, Velam, Mulhouse, VéloCité, Luxembourg, Veloh, Toulouse, Vélô, Santander, Tusbic, Goteborg, Göteborg, Nantes, Bicloo, Ljubljana, Bicikelj, Valence, Valenbisi">
+	<title>Cycles - Bicycle sharing finder</title>
     <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
@@ -11,9 +13,43 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div id="mapLocate"><img src="target.png" /></div>
 <div id="map"></div>
 <script src="//cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
 <script src="index.js"></script>
+<div id="waiting"><strong>caching...</strong>
+<p><u>Purpose</u> :</p>
+<p class="justify">Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山 市 (Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.</p>
+<p><u>Attributions</u> :</p>
+	<p>Open Data by &copy; <a href="https://developer.jcdecaux.com/">JCDecaux developer</a></p>
+    <p>Map data by &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors</p>
+    <p>creative commons license : <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></p>
+    <p>Imagery © <a href="http://cloudmade.com">CloudMade</a></p>
+	<p>Powered by <a href="http://leafletjs.com">Leaflet</a> © 2010–2013 <a href="http://agafonkin.com/en">Vladimir Agafonkin</a></p>
+</div>
+<div id="mapInfo"><img src="info.png" /></div>
+<div id="mapLocate"><img src="target.png" /></div>
+<div id="mapAttribution" class="nodisplay">
+    <table>
+        <tr>
+            <td><u>Purpose</u> :</td>
+            <td><div class="right"><a id="mapInfo2"><strong>×</strong></a></div></td>
+        </tr>
+    </table>
+	<p class="justify">Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山 市 (Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.</p>
+	<p><u>Attributions</u> :</p>
+	<p>Open Data by &copy; <a href="https://developer.jcdecaux.com/">JCDecaux developer</a></p>
+    <p>Map data by &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors</p>
+    <p>creative commons license : <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></p>
+    <p>Imagery © <a href="http://cloudmade.com">CloudMade</a></p>
+	<p>Powered by <a href="http://leafletjs.com">Leaflet</a> © 2010–2013 <a href="http://agafonkin.com/en">Vladimir Agafonkin</a></p>
+    <p>This web app was created on cloudy sundays in March 2013 by <br />Gilles Eschenbrenner,  <a href="http://www.lizazil.com">lizazil.com</a></p>
+    <p><iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe></p>	
+</div>
+<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-41765046-1', 'lizazil.com');
+  ga('send', 'pageview');</script>
 </body>
 </html>
