--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 </head>
 <body>
 <div id="map"></div>
-<script src="//cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-<script src="index.js"></script>
-<div id="waiting"><strong>caching...</strong>
+<script type="application/javascript" src="//cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+<script type="application/javascript" src="index.js"></script>
+<div id="waiting"><strong>waiting...</strong>
 <p><u>Purpose</u> :</p>
 <p class="justify">Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山 市 (Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.</p>
 <p><u>Attributions</u> :</p>
 	<p>Open Data by &copy; <a href="https://developer.jcdecaux.com/">JCDecaux developer</a></p>
     <p>Map data by &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors</p>
-    <p>creative commons license : <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></p>
-    <p>Imagery © <a href="http://cloudmade.com">CloudMade</a></p>
+    <p>Imagery © &copy; Gravitystorm Limited. Thunderforest is a project by <a href="http://www.gravitystorm.co.uk">Andy Allan</a></p>
 	<p>Powered by <a href="http://leafletjs.com">Leaflet</a> © 2010–2013 <a href="http://agafonkin.com/en">Vladimir Agafonkin</a></p>
 </div>
 <div id="mapInfo"><img src="info.png" /></div>
@@ -35,17 +34,23 @@
             <td><div class="right"><a id="mapInfo2"><strong>×</strong></a></div></td>
         </tr>
     </table>
-	<p class="justify">Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山 市 (Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.</p>
+	<p class="justify">Looking for a place to park your bike. Looking for available bikes. Tap or click on the map where you want to find the nearest stations. With a smartphone or a pad that integrates a GPS, click the target at the bottom left of your screen and you will find the status of all stations in the area.
+	You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山 市 (Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg,	Nantes, Ljubljana or Valencia. 
+	You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. 
+	</p>
 	<p><u>Attributions</u> :</p>
 	<p>Open Data by &copy; <a href="https://developer.jcdecaux.com/">JCDecaux developer</a></p>
     <p>Map data by &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors</p>
     <p>creative commons license : <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></p>
-    <p>Imagery © <a href="http://cloudmade.com">CloudMade</a></p>
+    <p>Imagery &copy; Gravitystorm Limited. Thunderforest is a project by <a href="http://www.gravitystorm.co.uk">Andy Allan</a></p>
 	<p>Powered by <a href="http://leafletjs.com">Leaflet</a> © 2010–2013 <a href="http://agafonkin.com/en">Vladimir Agafonkin</a></p>
+	<p>cycles.lizazil.com is made with Nginx, MongoDB, HTML5 and Javascript.</p>	
     <p>This web app was created on cloudy sundays in March 2013 by <br />Gilles Eschenbrenner,  <a href="http://www.lizazil.com">lizazil.com</a></p>
-    <p><iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe></p>	
+	<p><img src="http://www.gravatar.com/avatar/493f050b5a31d60cd3c5f7e8e6c54652.png" /></p>
+	<p><a href="mailto:gilles.eschenbrenner@gmail.com" class="button">Send me an email!</a></p>	
+	<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe>
 </div>
-<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<script type="application/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
