new parameters latlng, adress and zoom

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<p>cycles.lizazil.com is made with Nginx, MongoDB, HTML5 and Javascript.</p>	
     <p>This web app was created on cloudy sundays in March 2013 by <br />Gilles Eschenbrenner,  <a href="http://www.lizazil.com">lizazil.com</a></p>
 	<p><img src="http://www.gravatar.com/avatar/493f050b5a31d60cd3c5f7e8e6c54652.png" /></p>
-	<p><a href="mailto:gilles.eschenbrenner@gmail.com" class="button">Send me an email!</a></p>	
+	<p><a href="mailto:gilles.eschenbrenner@gmail.com&subject=About_Cycles.lizazil.com&body=" class="button">Send me an email!</a></p>	
 	<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe>
 </div>
 <script type="application/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
