Internal links updates to use HTTPS

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Looking for a place to park your bike. Looking for bikes available. You live in one of these cities: Créteil, Namur, Rouen, Besancon, 富山市(Toyama), Marseille, Stockholm, Nancy, Sevilla, Brussels, Cergy-Pontoise, Lyon, Paris, Amiens, Mulhouse, Luxembourg, Toulouse, Santander, Goteborg, Nantes, Ljubljana or Valencia. You subscribe to one of these services: Cristolib Li bia velo, Cy'clic, VéloCité, cyclocity, Cycling, Cyclocity VélOstan'Lib, Sevici, villo, Cycling2, Vélo'V, Velib, Velam, VéloCité, Veloh, Vélô, Tusbic, Gothenburg, Bicloo, Bicikelj or Valenbisi. Then this is for you. With a smartphone or a pad that integrates a GPS, or from your desktop, click the target at the bottom left of your screen and you will find the status of all stations in the area.">
 	<meta name="keywords" content="Créteil, Cristolib, Namur, Li bia velo, Rouen, cy\'clic, Besancon, VéloCité, Toyama, 富山市, cyclocity, Marseille, Le vélo, Stockholm, Cyclocity, Nancy, vélOstan\'lib, Seville, Sevici, Bruxelles-Capitale, villo, Cergy-Pontoise, Velo2, Lyon, Vélo\'V, Paris, Velib, Amiens, Velam, Mulhouse, VéloCité, Luxembourg, Veloh, Toulouse, Vélô, Santander, Tusbic, Goteborg, Göteborg, Nantes, Bicloo, Ljubljana, Bicikelj, Valence, Valenbisi">
 	<title>Cycles - Bicycle sharing finder</title>
-    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.css" />
     <!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.ie.min.css" />
     <![endif]-->
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <div id="map"></div>
-<script type="application/javascript" src="//cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.min.js"></script>
 <script type="application/javascript" src="index.js"></script>
 <div id="waiting"><strong>waiting...</strong>
 <p><u>Purpose</u> :</p>
@@ -46,9 +46,9 @@
 	<p>Powered by <a href="http://leafletjs.com">Leaflet</a> © 2010–2013 <a href="http://agafonkin.com/en">Vladimir Agafonkin</a></p>
 	<p>cycles.lizazil.com is made with Nginx, MongoDB, HTML5 and Javascript.</p>	
     <p>This web app was created on cloudy sundays in March 2013 by <br />Gilles Eschenbrenner,  <a href="http://www.lizazil.com">lizazil.com</a></p>
-	<p><img src="http://www.gravatar.com/avatar/493f050b5a31d60cd3c5f7e8e6c54652.png" /></p>
+	<p><img src="https://www.gravatar.com/avatar/493f050b5a31d60cd3c5f7e8e6c54652.png" /></p>
 	<p><a href="mailto:gilles.eschenbrenner@gmail.com&subject=About_Cycles.lizazil.com&body=" class="button">Send me an email!</a></p>	
-	<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe>
+	<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcycles.lizazil&amp;send=false&amp;layout=standard&amp;width=120&amp;show_faces=true&amp;font=verdana&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=47612438187" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:220px; height:80px;" allowTransparency="true"></iframe>
 </div>
 <script type="application/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
